--- a/others/tqdm.ipynb
+++ b/others/tqdm.ipynb
@@ -75,6 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* GitHub上だと正しく表示されないようです。\n",
     "* 上記を実行するとエラーが表示される場合は、[こちら](https://ipywidgets.readthedocs.io/en/stable/user_install.html)を参考にするといいかもしれません。\n",
     "* 上記を実行中は下記のようなツールバーが実行されます（黒背景にしているため見づらいかもしれませんが・・・。）"
    ]
