--- a/others/tqdm.ipynb
+++ b/others/tqdm.ipynb
@@ -86,6 +86,20 @@
    "source": [
     "<img src=\"tqdm.png\">"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 追記（2017/11/24)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Jupyter Notebook上でも `tqdm_notebook` を用いず `tqdm` でも動作するようです。"
+   ]
   }
  ],
  "metadata": {
