--- a/model_selection/TimeSeriesSplit.ipynb
+++ b/model_selection/TimeSeriesSplit.ipynb
@@ -14,7 +14,7 @@
     "    * ・・・\n",
     "    * 1~K番目をtrain,K+1番目をtest\n",
     "* K個のtrain, testの組み合わせを得ることができる\n",
-    "* trainデータの"
+    "* testデータのn数は変わらないが、trainデータのn数は変わるため、注意が必要。"
    ]
   },
   {
@@ -49,43 +49,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:00</th>\n",
-       "      <td>49525</td>\n",
+       "      <td>49784</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:01</th>\n",
-       "      <td>49150</td>\n",
+       "      <td>49433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:02</th>\n",
-       "      <td>49524</td>\n",
+       "      <td>49360</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:03</th>\n",
-       "      <td>49587</td>\n",
+       "      <td>49844</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:04</th>\n",
-       "      <td>49392</td>\n",
+       "      <td>49615</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:05</th>\n",
-       "      <td>49653</td>\n",
+       "      <td>50070</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:06</th>\n",
-       "      <td>50027</td>\n",
+       "      <td>50233</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:07</th>\n",
-       "      <td>50138</td>\n",
+       "      <td>50479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:08</th>\n",
-       "      <td>50225</td>\n",
+       "      <td>50504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:09</th>\n",
-       "      <td>50390</td>\n",
+       "      <td>50443</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -93,16 +93,16 @@
       ],
       "text/plain": [
        "                     price\n",
-       "2017-11-01 10:00:00  49525\n",
-       "2017-11-01 10:00:01  49150\n",
-       "2017-11-01 10:00:02  49524\n",
-       "2017-11-01 10:00:03  49587\n",
-       "2017-11-01 10:00:04  49392\n",
-       "2017-11-01 10:00:05  49653\n",
-       "2017-11-01 10:00:06  50027\n",
-       "2017-11-01 10:00:07  50138\n",
-       "2017-11-01 10:00:08  50225\n",
-       "2017-11-01 10:00:09  50390"
+       "2017-11-01 10:00:00  49784\n",
+       "2017-11-01 10:00:01  49433\n",
+       "2017-11-01 10:00:02  49360\n",
+       "2017-11-01 10:00:03  49844\n",
+       "2017-11-01 10:00:04  49615\n",
+       "2017-11-01 10:00:05  50070\n",
+       "2017-11-01 10:00:06  50233\n",
+       "2017-11-01 10:00:07  50479\n",
+       "2017-11-01 10:00:08  50504\n",
+       "2017-11-01 10:00:09  50443"
       ]
      },
      "execution_count": 1,
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
