add timeseries rolling

--- a/preprocessing/timeseries.ipynb
+++ b/preprocessing/timeseries.ipynb
@@ -86,43 +86,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:00</th>\n",
-       "      <td>49793</td>\n",
+       "      <td>50300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:01</th>\n",
-       "      <td>49848</td>\n",
+       "      <td>50444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:02</th>\n",
-       "      <td>50282</td>\n",
+       "      <td>50767</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:03</th>\n",
-       "      <td>50104</td>\n",
+       "      <td>51143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:04</th>\n",
-       "      <td>49838</td>\n",
+       "      <td>51544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:05</th>\n",
-       "      <td>50045</td>\n",
+       "      <td>51365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:06</th>\n",
-       "      <td>49772</td>\n",
+       "      <td>50918</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:07</th>\n",
-       "      <td>50138</td>\n",
+       "      <td>50882</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:08</th>\n",
-       "      <td>50568</td>\n",
+       "      <td>50545</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:09</th>\n",
-       "      <td>50862</td>\n",
+       "      <td>50635</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -130,16 +130,16 @@
       ],
       "text/plain": [
        "                     price\n",
-       "2017-11-01 10:00:00  49793\n",
-       "2017-11-01 10:00:01  49848\n",
-       "2017-11-01 10:00:02  50282\n",
-       "2017-11-01 10:00:03  50104\n",
-       "2017-11-01 10:00:04  49838\n",
-       "2017-11-01 10:00:05  50045\n",
-       "2017-11-01 10:00:06  49772\n",
-       "2017-11-01 10:00:07  50138\n",
-       "2017-11-01 10:00:08  50568\n",
-       "2017-11-01 10:00:09  50862"
+       "2017-11-01 10:00:00  50300\n",
+       "2017-11-01 10:00:01  50444\n",
+       "2017-11-01 10:00:02  50767\n",
+       "2017-11-01 10:00:03  51143\n",
+       "2017-11-01 10:00:04  51544\n",
+       "2017-11-01 10:00:05  51365\n",
+       "2017-11-01 10:00:06  50918\n",
+       "2017-11-01 10:00:07  50882\n",
+       "2017-11-01 10:00:08  50545\n",
+       "2017-11-01 10:00:09  50635"
       ]
      },
      "execution_count": 3,
@@ -206,28 +206,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:00</th>\n",
-       "      <td>49793</td>\n",
+       "      <td>50300</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:01</th>\n",
-       "      <td>49848</td>\n",
-       "      <td>55.0</td>\n",
+       "      <td>50444</td>\n",
+       "      <td>144.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:02</th>\n",
-       "      <td>50282</td>\n",
-       "      <td>434.0</td>\n",
+       "      <td>50767</td>\n",
+       "      <td>323.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:03</th>\n",
-       "      <td>50104</td>\n",
-       "      <td>-178.0</td>\n",
+       "      <td>51143</td>\n",
+       "      <td>376.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:04</th>\n",
-       "      <td>49838</td>\n",
-       "      <td>-266.0</td>\n",
+       "      <td>51544</td>\n",
+       "      <td>401.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -235,11 +235,11 @@
       ],
       "text/plain": [
        "                     price  diff_1\n",
-       "2017-11-01 10:00:00  49793     NaN\n",
-       "2017-11-01 10:00:01  49848    55.0\n",
-       "2017-11-01 10:00:02  50282   434.0\n",
-       "2017-11-01 10:00:03  50104  -178.0\n",
-       "2017-11-01 10:00:04  49838  -266.0"
+       "2017-11-01 10:00:00  50300     NaN\n",
+       "2017-11-01 10:00:01  50444   144.0\n",
+       "2017-11-01 10:00:02  50767   323.0\n",
+       "2017-11-01 10:00:03  51143   376.0\n",
+       "2017-11-01 10:00:04  51544   401.0"
       ]
      },
      "execution_count": 4,
@@ -293,33 +293,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:00</th>\n",
-       "      <td>49793</td>\n",
+       "      <td>50300</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:01</th>\n",
-       "      <td>49848</td>\n",
-       "      <td>55.0</td>\n",
+       "      <td>50444</td>\n",
+       "      <td>144.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:02</th>\n",
-       "      <td>50282</td>\n",
-       "      <td>434.0</td>\n",
+       "      <td>50767</td>\n",
+       "      <td>323.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:03</th>\n",
-       "      <td>50104</td>\n",
-       "      <td>-178.0</td>\n",
-       "      <td>311.0</td>\n",
+       "      <td>51143</td>\n",
+       "      <td>376.0</td>\n",
+       "      <td>843.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-11-01 10:00:04</th>\n",
-       "      <td>49838</td>\n",
-       "      <td>-266.0</td>\n",
-       "      <td>-10.0</td>\n",
+       "      <td>51544</td>\n",
+       "      <td>401.0</td>\n",
+       "      <td>1100.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -327,11 +327,11 @@
       ],
       "text/plain": [
        "                     price  diff_1  diff_3\n",
-       "2017-11-01 10:00:00  49793     NaN     NaN\n",
-       "2017-11-01 10:00:01  49848    55.0     NaN\n",
-       "2017-11-01 10:00:02  50282   434.0     NaN\n",
-       "2017-11-01 10:00:03  50104  -178.0   311.0\n",
-       "2017-11-01 10:00:04  49838  -266.0   -10.0"
+       "2017-11-01 10:00:00  50300     NaN     NaN\n",
+       "2017-11-01 10:00:01  50444   144.0     NaN\n",
+       "2017-11-01 10:00:02  50767   323.0     NaN\n",
+       "2017-11-01 10:00:03  51143   376.0   843.0\n",
+       "2017-11-01 10:00:04  51544   401.0  1100.0"
       ]
      },
      "execution_count": 5,
@@ -342,6 +342,124 @@
    "source": [
     "df[\"diff_3\"] = df[\"price\"].diff(periods=3)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 移動平均"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## rolling\n",
+    "* rollingを用いると、移動平均のような、DataFrameを上からなぞりつつ、特定の行数分だけ着目し、計算するということができる。\n",
+    "* 下記は、3秒ごとの平均（移動平均）を求めている。\n",
+    "* `window` で秒数を指定することができるのは便利。\n",
+    "* なお、下記のように、`window` に時間を用いている場合は、オプションの `center` を用いることはできない。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "      <th>diff_1</th>\n",
+       "      <th>diff_3</th>\n",
+       "      <th>rolling_mean_3s</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-11-01 10:00:00</th>\n",
+       "      <td>50300</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50300.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-11-01 10:00:01</th>\n",
+       "      <td>50444</td>\n",
+       "      <td>144.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50372.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-11-01 10:00:02</th>\n",
+       "      <td>50767</td>\n",
+       "      <td>323.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50503.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-11-01 10:00:03</th>\n",
+       "      <td>51143</td>\n",
+       "      <td>376.0</td>\n",
+       "      <td>843.0</td>\n",
+       "      <td>50784.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-11-01 10:00:04</th>\n",
+       "      <td>51544</td>\n",
+       "      <td>401.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>51151.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     price  diff_1  diff_3  rolling_mean_3s\n",
+       "2017-11-01 10:00:00  50300     NaN     NaN     50300.000000\n",
+       "2017-11-01 10:00:01  50444   144.0     NaN     50372.000000\n",
+       "2017-11-01 10:00:02  50767   323.0     NaN     50503.666667\n",
+       "2017-11-01 10:00:03  51143   376.0   843.0     50784.666667\n",
+       "2017-11-01 10:00:04  51544   401.0  1100.0     51151.333333"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"rolling_mean_3s\"] = df[\"price\"].rolling(window=\"3s\").mean()\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 上記は、ある行から過去に遡って3秒の行の平均を求めている。\n",
+    "* `2017-11-01 10:00:02` の行であれば、 `2017-11-01 10:00:00`, `2017-11-01 10:00:01`, `2017-11-01 10:00:02` の行の `price` を足し、平均し、 `2017-11-01 10:00:02` の行の `rolling_mean_3s` の列に記載している。\n",
+    "* `2017-11-01 10:00:00`はその前2秒のデータがないためあるだけの（その行だけの）平均を求めている。"
    ]
   }
  ],
